--- a/kde-store-archives/global-theme/catppuccin/metadata.desktop
+++ b/kde-store-archives/global-theme/catppuccin/metadata.desktop
@@ -10,4 +10,4 @@ X-KDE-PluginInfo-Name=Catppuccin
 X-KDE-PluginInfo-Version=v1
 X-KDE-PluginInfo-Website=
 X-KDE-ServiceTypes=Plasma/LookAndFeel
-X-KPackage-Dependencies=kns://plasma-themes.knsrc/api.kde-look.org/1462611,kns://icons.knsrc/api.kde-look.org/1651940,kns://wallpaper.knsrc/api.kde-look.org/1571655
+X-KPackage-Dependencies=kns://colorschemes.knsrc/api.kde-look.org/1690362,kns://plasma-themes.knsrc/api.kde-look.org/1462611,kns://icons.knsrc/api.kde-look.org/1651940,kns://wallpaper.knsrc/api.kde-look.org/1571655s
