--- a/Resources/aurorae/CatppuccinMocha-Classic/metadata.desktop
+++ b/Resources/aurorae/CatppuccinMocha-Classic/metadata.desktop
@@ -1,10 +1,9 @@
 [Desktop Entry]
-Name=Catppuccin Macchiato
-Comment=Soothing Pastel theme for the Aurorae Theme Engine
-X-KDE-PluginInfo-Author=Catpppuccin
+Name=Catppuccin Mocha Classic
+Comment=Soothing Pastel theme for KwinX-KDE-PluginInfo-Author=Catpppuccin
 X-KDE-PluginInfo-Email=core@catppucin.com
 X-KDE-PluginInfo-Version=1.0
-X-KDE-PluginInfo-Name=Catppuccin-Macchiato-Aurorae
+X-KDE-PluginInfo-Name=Catppuccin-Mocha-Aurorae
 X-KDE-PluginInfo-Category=
 X-KDE-PluginInfo-Depends=
 X-KDE-PluginInfo-License=MIT
