--- a/Resources/aurorae/CatppuccinFrappe-Classic/metadata.desktop
+++ b/Resources/aurorae/CatppuccinFrappe-Classic/metadata.desktop
@@ -1,9 +1,10 @@
 [Desktop Entry]
 Name=Catppuccin Frappe Classic
-Comment=Soothing Pastel theme for KwinX-KDE-PluginInfo-Author=Catpppuccin
-X-KDE-PluginInfo-Email=core@catppucin.com
-X-KDE-PluginInfo-Version=1.0
-X-KDE-PluginInfo-Name=Catppuccin-Frappe-Aurorae
+Comment=Soothing Pastel theme for Kwin
+X-KDE-PluginInfo-Author=Sourcastic-Catppuccin
+X-KDE-PluginInfo-Email=core@catppuccin.com
+X-KDE-PluginInfo-Version=0.2.2.1
+X-KDE-PluginInfo-Name=CatppuccinFrappe-Classic
 X-KDE-PluginInfo-Category=
 X-KDE-PluginInfo-Depends=
 X-KDE-PluginInfo-License=MIT
