--- a/Resources/aurorae/CatppuccinFrappe-Modern/metadata.desktop
+++ b/Resources/aurorae/CatppuccinFrappe-Modern/metadata.desktop
@@ -1,10 +1,10 @@
 [Desktop Entry]
 Name=Catppuccin Frappe Modern
 Comment=Soothing Pastel theme for Kwin
-X-KDE-PluginInfo-Author=Cequal
-X-KDE-PluginInfo-Email=
-X-KDE-PluginInfo-Name=
-X-KDE-PluginInfo-Version=0.2.1
+X-KDE-PluginInfo-Author=Cequal-Catppuccin
+X-KDE-PluginInfo-Email=core@catppuccin.com
+X-KDE-PluginInfo-Name=CatppuccinFrappe-Modern
+X-KDE-PluginInfo-Version=0.2.2.1
 X-KDE-PluginInfo-Category=
 X-KDE-PluginInfo-Depends=
 X-KDE-PluginInfo-License=
