--- a/resources/aurorae/catppuccin-frappe-classic/metadata.desktop
+++ b/resources/aurorae/catppuccin-frappe-classic/metadata.desktop
@@ -4,7 +4,7 @@ Comment=Soothing Pastel theme for Kwin
 X-KDE-PluginInfo-Author=Sourcastic-Catppuccin
 X-KDE-PluginInfo-Email=core@catppuccin.com
 X-KDE-PluginInfo-Version=0.2.6
-X-KDE-PluginInfo-Name=catppuccin-frappe-classic
+X-KDE-PluginInfo-Name=Catppuccin Frappe (Classic)
 X-KDE-PluginInfo-Category=
 X-KDE-PluginInfo-Depends=
 X-KDE-PluginInfo-License=MIT
