--- a/resources/aurorae/catppuccin-frappe-modern/metadata.desktop
+++ b/resources/aurorae/catppuccin-frappe-modern/metadata.desktop
@@ -3,7 +3,7 @@ Name=Catppuccin Frappe Modern
 Comment=Soothing Pastel theme for Kwin
 X-KDE-PluginInfo-Author=Cequal-Catppuccin
 X-KDE-PluginInfo-Email=core@catppuccin.com
-X-KDE-PluginInfo-Name=catppuccin-frappe-modern
+X-KDE-PluginInfo-Name=Catppuccin Frappe (Modern)
 X-KDE-PluginInfo-Version=0.2.6
 X-KDE-PluginInfo-Category=
 X-KDE-PluginInfo-Depends=
