--- a/resources/aurorae/catppuccin-latte-modern/metadata.desktop
+++ b/resources/aurorae/catppuccin-latte-modern/metadata.desktop
@@ -3,7 +3,7 @@ Name=Catppuccin Latte Modern
 Comment=Soothing Pastel theme for Kwin
 X-KDE-PluginInfo-Author=Cequal-Catppuccin
 X-KDE-PluginInfo-Email=core@catppuccin.com
-X-KDE-PluginInfo-Name=catppuccin-latte-modern
+X-KDE-PluginInfo-Name=Catppuccin Latte (Modern)
 X-KDE-PluginInfo-Version=0.2.6
 X-KDE-PluginInfo-Category=
 X-KDE-PluginInfo-Depends=
