--- a/resources/aurorae/catppuccin-mocha-modern/metadata.desktop
+++ b/resources/aurorae/catppuccin-mocha-modern/metadata.desktop
@@ -3,7 +3,7 @@ Name=catppuccin-mocha-modern
 Comment=Soothing Pastel theme for Kwin
 X-KDE-PluginInfo-Author=Cequal-Catppuccin
 X-KDE-PluginInfo-Email=core@catppuccin.com
-X-KDE-PluginInfo-Name=catppuccin-mocha-modern
+X-KDE-PluginInfo-Name=Catppuccin Mocha (Modern)
 X-KDE-PluginInfo-Version=0.2.6
 X-KDE-PluginInfo-Category=
 X-KDE-PluginInfo-Depends=
